@@ -1378,11 +1378,11 @@ class depgraph:
 				if x[1]!="/":
 					if "--columns" in myopts:
 						myprint="["+x[0]+" "+addl+"] "+indent+darkgreen(xs[0])
-						if (newlp-len(myprint)) > 0:
-							myprint=myprint+(" "*(newlp-len(myprint)))
+						if (newlp-nc_len(myprint)) > 0:
+							myprint=myprint+(" "*(newlp-nc_len(myprint)))
 						myprint=myprint+"["+darkblue(xs[1]+xs[2])+"] "
-						if (oldlp-len(myprint)) > 0:
-							myprint=myprint+" "*(oldlp-len(myprint))
+						if (oldlp-nc_len(myprint)) > 0:
+							myprint=myprint+" "*(oldlp-nc_len(myprint))
 						myprint=myprint+myoldbest
 						myprint=myprint+darkgreen("  to "+x[1])+" "+verboseadd
 					else:
@@ -1390,11 +1390,11 @@ class depgraph:
 				else:
 					if "--columns" in myopts:
 						myprint="["+x[0]+" "+addl+"] "+indent+darkgreen(xs[0])
-						if (newlp-len(myprint)) > 0:
-							myprint=myprint+(" "*(newlp-len(myprint)))
+						if (newlp-nc_len(myprint)) > 0:
+							myprint=myprint+(" "*(newlp-nc_len(myprint)))
 						myprint=myprint+green(" ["+xs[1]+xs[2]+"] ")
-						if (oldlp-len(myprint)) > 0:
-							myprint=myprint+(" "*(oldlp-len(myprint)))
+						if (oldlp-nc_len(myprint)) > 0:
+							myprint=myprint+(" "*(oldlp-nc_len(myprint)))
 						myprint=myprint+myoldbest+"  "+verboseadd
 					else:
 						if x[3]=="nomerge":
@@ -1618,15 +1618,15 @@ class depgraph:
 					#dynamically update our database	
 			elif x[0]=="binary":
 				#merge the tbz2
+				mytbz2=portage.db[portage.root]["bintree"].getname(x[2])
 				if portage.db[portage.root]["bintree"].isremote(x[2]):
-					emergelog(" --- ("+str(mergecount)+" of "+str(len(mymergelist))+") Fetching Binary ("+x[pkgindex]+"::"+y+")")
+					emergelog(" --- ("+str(mergecount)+" of "+str(len(mymergelist))+") Fetching Binary ("+x[pkgindex]+"::"+mytbz2+")")
 					portage.db[portage.root]["bintree"].gettbz2(x[2])
 
 				if ("--fetchonly" in myopts):
 					continue
 				
-				mytbz2=portage.db[portage.root]["bintree"].getname(x[2])
-				emergelog(" === ("+str(mergecount)+" of "+str(len(mymergelist))+") Merging Binary ("+x[pkgindex]+"::"+y+")")
+				emergelog(" === ("+str(mergecount)+" of "+str(len(mymergelist))+") Merging Binary ("+x[pkgindex]+"::"+mytbz2+")")
 				retval=portage.pkgmerge(mytbz2,x[1],self.pkgsettings)
 				if retval==None:
 					sys.exit(1)
@@ -1986,6 +1986,11 @@ def post_emerge(retval=0):
 					if myso!="":
 						if re.search(existsstr,myso):
 							# Already exists... Don't increment the count for this.
+							pass
+						elif myso[:44]=="install-info: warning: no info dir entry in ":
+							# This info file doesn't contain a DIR-header: install-info produces this
+							# (harmless) warning (the --quiet switch doesn't seem to work).
+							# Don't increment the count for this.
 							pass
 						else:
 							badcount=badcount+1
