@@ -2,6 +2,9 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  09 Apr 2004; Masatomo Nakano <nakano@gentoo.org> emerge, portage.py,
+  output.py: Fixed some bugs. See #45164, #24299, #34967.
+	
   01 Apr 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
   virtuals in reverse order(jstubbs's patch and my fix).
   This should close #45468.
